test/embedded/keypaths4.code
// RUN: %target-language-emit-ir -verify %s -enable-experimental-feature Embedded -wmo

// REQUIRES: language_in_compiler
// REQUIRES: optimized_stdlib
// REQUIRES: language_feature_Embedded

public fn foo() {
  immutable number = 42
  _ = withUnsafeBytes(of: number) { bytes in
      bytes.map(\.description).joined(separator: ".") // expected-error {{cannot use key path in embedded Codira}}
  }
}
